--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,15 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
+}
+body{
     background-color: rgb(192, 192, 192);
+    min-width: 1325px;
+}
+.bbutton{
+    background-color: #0061FF;
+    padding: 10px 15px 10px 15px;
+    color: white;
 }
 /*header*/
 .debugh{
@@ -32,11 +40,11 @@
     color: black;
     padding: 20px 0 40px 0;
 }
-a:hover{
+/*a:hover{
     padding-bottom: 42px;
     border-bottom: 2px solid green;
     height: 40px;
-}
+}*/
 header .inizia{
     padding: 10px 15px 10px 15px;
     color: white;
@@ -62,11 +70,9 @@ header .inizia{
     margin: 0 15px 0 15px;
     padding: 20px;
 }
-
 .top-box{
     background-color: #B4D0E7;
 }
-
 .header-text-box{
     margin-top: 50px;
     display: inline-block;
@@ -74,13 +80,14 @@ header .inizia{
     height: 300px;
 }
 .header-image-box{
+    float: right;
     margin-top: 50px;
-    display: inline-block;
     width: 60%;
     height: 300px;
 }
-
-
+.header-image-box img{
+    width: 100%;
+}
 .content-top h1{
     font-size: 92px;
     display: inline-block;
@@ -102,7 +109,169 @@ header .inizia{
     height: 3000px;
     width: 80%;
     margin: 150px 10% 0 10%;
-
 }
+
+.container-main h1{
+    font-size: 40px;
+    text-align: center;
+    margin-top: 10px;
+}
+.piani-main{
+    margin-top: 50px;
+    width: 100%;
+    height: 100px;
+}
+.fatturazione-main div{
+    display: inline-block;
+    margin-right: 25px;
+}
+
+
+.blocchi-piani{
+    display: inline-block;
+    height: 700px;
+    width: 350px;
+}
+.blocchi-piani h1{
+    font-size: 23px;
+    margin-bottom: 20px;
+}
+.blocchi-piani h2{
+    font-weight: bolder;
+}
+.blocchi-piani h3{
+    font-size: 14px;
+}
+.blocchi-piani h2, .blocchi-piani h3, .blocchi-piani h4, .blocchi-piani h5, .blocchi-piani div, .blocchi-piani ul{
+    padding-left: 20px;
+}
+.blocchi-piani ul{
+    padding-left: 40px;
+}
+.blocchi-piani li{
+    margin-top: 15px;
+}
+
+
+
+.blocchi-piani1{
+    float: left;
+}
+.blocchi-piani2{
+    display: inline-block;
+    margin-left: calc((100% - 1050px) / 2 );
+}
+.blocchi-piani3{
+    float: right;
+}
+
+.blocco-enterprise{
+    margin-top: 200px;
+    width: 100%;
+    height: 200px;
+}
+.blocco-enterprise div{
+    top: -130px;
+    position: relative;
+    float: right;
+}
+.blocco-enterprise h2, .blocco-enterprise h3, .blocco-enterprise h5{
+    padding: 0 0 20px 20px;
+}
+
+
+.partner-box div{
+    margin: 0;
+    padding: 0;
+}
+.partner-box{
+    display: flex;
+    width: 100%;
+}
+.foto-partner{
+    width: 50%;
+    height: 100%;
+}
+.text-partner{
+    width: 50%;
+    height: 100%;
+}
+.foto-partner img{
+    width: 95%;
+}
+.debugx{
+    background-color: transparent;
+}
+
+
+.wbutton{
+    text-decoration: none;
+    background-color: white;
+    padding: 10px 15px 10px 15px;
+    color: black;
+    border: 1px solid black;
+}
+.text-partner div{
+    margin-top: 30px;
+}
+.text-partner h2{
+    font-size: 40px;
+}
+.text-partner h3{
+    margin-top: 25px;
+    font-size: 20px;
+}
+
+
+.box-operazioni{
+    width: 100%;
+}
+.box-operazioni h2{
+    margin: 100px 0 20px 0;
+}
+.operazioni-riga1{
+    width: 100%;
+    height: 600px;
+}
+.operazioni-riga2{
+    width: 100%;
+    height: 600px;
+}
+.operazioni{
+    width: 350px;
+    height: 100%;
+    background-color: magenta;
+}
+.operazioni1, .operazioni2, .operazioni4, .operazioni5{
+    display: inline-block;
+}
+.operazioni3, .operazioni6{
+    float: right;
+}
+.operazioni2, .operazioni5{
+    margin-left: calc((100% - 1058px) / 2 );
+}
+.operazioni img{
+    width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*fine main*/
