--- a/css/style.css
+++ b/css/style.css
@@ -279,9 +279,10 @@ main{
 
 
 /*footer*/
-/*.debugf{
-    border: 1px solid yellow;
-}*/
+/**/
+.debugf{
+    background-color: rgba(0, 255, 255, 0.2);
+}
 footer{
     width: 100%;
     height: 2000px;
