--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ body{
 .top-bar{
     width: 100%;
     height: 80px;
+    position: fixed;
+    z-index: 200;
+    background-color: white;
 }
 .top-box{
     width: 100%;
@@ -75,6 +78,7 @@ header .inizia{
 }
 .top-box{
     background-color: #B4D0E7;
+    padding-top: 80px;
 }
 .header-text-box{
     margin-top: 50px;
@@ -115,7 +119,7 @@ header .inizia{
     border: 1px transparent green;
 }
 main{
-    height: 3900px;
+    height: 3950px;
     margin: 250px 10% 0 10%;
 }
 
