--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ body{
     padding: 10px 15px 10px 15px;
     color: white;
 }
+.bbutton:hover{
+    background-color: #297AFE;
+}
 /*header*/
 .debugh{
     border: 1px transparent red;
@@ -50,16 +53,44 @@ body{
     color: black;
     padding: 20px 0 40px 0;
 }
-.top-bar-section a:not(.inizia):hover{
+.top-bar-section a:not(.inizia):not(#supporto):not(#dropdown ul li a):hover{
     padding-bottom: 36px;
     border-bottom: 2px solid green;
     height: 38px;
 }
+.top-bar-section #dropdown li{
+    list-style: none;
+    text-align: left;
+    font-size: 20px;
+    padding: 10px;
+}
+.top-bar-section #dropdown ul{
+    padding: 12px 22px;
+}
+.top-bar-section #dropdown{
+    width: 300px;
+    height: 120px;
+    background-color: #F2EEE8;
+    position: fixed;
+    right: 400px;
+    top: 80px;
+    display: none;
+}
+#supporto:hover ~ #dropdown{
+    display: inline;
+}
+#dropdown:hover{
+    display: inline;
+}
+
 header .inizia{
     padding: 10px 15px 10px 15px;
     color: white;
     background-color: #0061FF;
     border-radius: 2px;
+}
+header .inizia:hover{
+    background-color: #297AFE;
 }
 .top-bar-section-l{
     float: left;
@@ -187,7 +218,7 @@ main{
     padding-left: 20px;
 }
 .blocchi-piani ul{
-    padding-left: 40px;
+    padding-left: 10px;
     margin-bottom: 120px;
 }
 .blocchi-piani li{
